# par15

./: CMakeLists.txt  README.md  benchmark_jupiter.sh  benchmark_saturn.sh
CMake/: run_test.cmake
benchmarks/: bench.gnuplot  create_diagrams.sh  jupiter.benchmark.1453472563.csv  saturn.benchmark.145347654.csv
doc/: bench.gnuplot  create_diagrams.sh  dark2.pal  documentation.tex  jupiter_mpi.csv  jupiter_mpi_scale.csv  jupiter_seq.csv  references.bib  saturn_cilk.csv  saturn_cilk_scale.csv  saturn_mpi.csv  saturn_mpi_scale.csv  saturn_openmp.csv  saturn_openmp_scale.csv  saturn_seq.csv  scale.gnuplot  seq_bench.gnuplot
stencil/: CMakeLists.txt  matrix.c  matrix.h  util.c  util.h  vector.c  vector.h
stencil_cilk/: CMakeLists.txt  benchmark.c  main.c  stencil_cilk.c  stencil_cilk.h  unit_test_one_vec.c  unit_test_tmp_matrix.c  unit_test_two_vec.c
stencil_mpi/: CMakeLists.txt  benchmark.c  benchmark_nonblocking.c  benchmark_onesided.c  benchmark_sendrecv.c  main.c  stencil_mpi.c  stencil_mpi.h  unit_test_mpi.c  unit_test_one_vec.c  unit_test_tmp_matrix.c  unit_test_two_vec.c
stencil_openmp/: CMakeLists.txt  benchmark.c  main.c  stencil_openmp.c  stencil_openmp.h  test.c  unit_test_one_vec.c  unit_test_tmp_matrix.c
stencil_sequential/: CMakeLists.txt  benchmark.c  main.c  stencil_sequential.c  stencil_sequential.h  unit_test_one_vec.c  unit_test_tmp_matrix.c  unit_test_two_vec.c
tests/: 18by18_1.test  18by18_1.test.exp  20by20_1.test  20by20_1.test.exp  23by23_3.test  23by23_3.test.exp  512by512_1.test  512by512_1.test.exp
